# building-ai-agents-with-openai

./: .env.example  .gitignore  .lycheecache  .markdownlint-cli2.yaml  .markdownlintignore  README.md  lychee.toml  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  content_improvement.md  feature_request.md
.github/agents/: ml-ci-verify.md  ml-topic-bundle-review.md  ml-zero-copy-review.md  workshop-ci-verify.md  workshop-topic-bundle-review.md  workshop-zero-copy-review.md
.github/prompts/: smart-prompt-framework-guide.md  task-prompt.md
.github/reviews/: README.md
.github/rules/: 01_swamy_personal_learning_only.mdc  01_workshop_scope.mdc  02_educational-content-rules.mdc  03_repository-structure.mdc  04_quality-assurance.mdc  05_markdown-standards.mdc  06_primary-directives.mdc  README.md  (+3 more)
assets/: README.md
config/: README.md
docs/: 01-folder-structure.md  01-repository-structure.md  02-how-to-execute.md  02-master-plan.md  03-getting-started.md  03-versioning-branching.md  04-introduction.md  04-releases.md  05-ai-agents.md  06-openai-agent-sdk.md  07-mcp.md  08-tool-calling.md  09-context-engineering.md  10-rag.md  11-multi-agent.md  12-production.md  13-observability-dashboard.md  14-versioning-branching.md  15-evaluation-guardrails.md  16-releases.md  agent-governance-recovery.md  agent-skills.md  agent-subagents.md  co-architect-operating-guidance.md
examples/: README.md
presentation/: README.md
sessions/: README.md
tools/: README.md  e2e-smoke.ps1
(+202 files in other folders)
